--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Dantina";
+  src: url("./Dantina-Lj5y.otf");
+}
 ul, li {
   text-decoration: none;
   list-style-type: none;
@@ -37,9 +41,6 @@ ul, li {
   right: 0;
   color: white;
   margin-top: 1.5rem;
-}
-
-.navbar {
   z-index: 1;
 }
 
@@ -50,15 +51,16 @@ ul, li {
 .navbar .navbar-brand {
   margin-left: 1rem;
 }
-
-#root > nav > div > a > p > span.display-5 {
+.navbar .navbar-brand span.display-5 {
   line-height: 1;
 }
-
-#root > nav > div > a > p > span.display-5 > span {
+.navbar .navbar-brand span.display-5 span {
   line-height: 0;
 }
-
+.navbar .navbar-brand .sub-text {
+  position: absolute;
+  right: -1rem;
+}
 .navbar .nav-link {
   font-family: serif;
 }
@@ -80,8 +82,6 @@ ul, li {
 
 .cover {
   min-width: 100vw;
-  min-height: 70vh;
-  height: 100vh;
   width: 100vw;
 }
 
@@ -101,7 +101,7 @@ ul, li {
 }
 .about.cover .row .col .section-heading span {
   font-size: 2.5rem;
-  font-family: "Brush Script", cursive;
+  font-family: "Dantina", "Brush Script", cursive;
 }
 .about.cover .row .col ul li {
   display: flex;
