--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Dantina';
+    src: url('./Dantina-Lj5y.otf');
+}
 ul, li {
     text-decoration: none;
     list-style-type: none;
@@ -16,6 +20,7 @@ ul, li {
 
   
   .bg-image::before {
+    
     position: fixed;
     content: "";
     top:0;
@@ -38,31 +43,34 @@ ul, li {
     right:0;
     color:white;
     margin-top: 1.5rem;
-  }
-  
-  .navbar{
     z-index: 1;
-    
   }
+ 
   .fixed-top{
     animation: fadeInDown 0.5s;
   }
   
-  .navbar .navbar-brand{
-    margin-left: 1rem
-  }
+.navbar {
+    .navbar-brand{
+        margin-left: 1rem;
+        span.display-5{
+            line-height: 1;
+            span{
+                line-height: 0;;
+            }
+        }
+        .sub-text{
+            position:absolute;
+            right: -1rem;
+        }
+    }
+
+    .nav-link{
+        font-family: serif;
+    }
+}
   
-  #root > nav > div > a > p > span.display-5{
-    line-height: 1;
-  }
   
-  #root > nav > div > a > p > span.display-5 > span{
-    line-height: 0;
-  }
-  
-  .navbar .nav-link{
-    font-family: serif;
-  }
   
   .desc{
     background-color: #fff;
@@ -82,8 +90,7 @@ ul, li {
 
 .cover{
     min-width: 100vw;
-    min-height: 70vh;
-    height: 100vh;
+    
     width: 100vw;
 }
 
@@ -103,7 +110,7 @@ ul, li {
             font-family: serif;
             span{
                 font-size: 2.5rem;
-                font-family: "Brush Script", cursive;
+                font-family: 'Dantina', "Brush Script", cursive;
             }
         }
         
