--- a/src/App.scss
+++ b/src/App.scss
@@ -37,20 +37,20 @@ ul, li {
     height: 100vh;
   }
   
-  .navbar.stay-top {
-    position: absolute;
-    left: 0;
-    right:0;
-    color:white;
-    margin-top: 1.5rem;
-    z-index: 1;
-  }
  
   .fixed-top{
     animation: fadeInDown 0.5s;
   }
   
 .navbar {
+    &.stay-top{
+        position: absolute;
+    left: 0;
+    right:0;
+    color:white;
+    margin-top: 1.5rem;
+    z-index: 1;
+    }
     .navbar-brand{
         margin-left: 1rem;
         span.display-5{
