--- a/src/App.css
+++ b/src/App.css
@@ -1,183 +1,42 @@
-@font-face {
-  font-family: "Dantina";
-  src: url("./Dantina-Lj5y.otf");
-}
-ul, li {
-  text-decoration: none;
-  list-style-type: none;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
-/* .bg-image::before{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-
-} */
-.bg-image::before {
-  position: fixed;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./food.jpeg");
-  z-index: 0;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.bg-image {
-  height: 100vh;
-}
-
-.fixed-top {
-  animation: fadeInDown 0.5s;
-}
-
-.navbar.stay-top {
-  position: absolute;
-  left: 0;
-  right: 0;
-  color: white;
-  margin-top: 1.5rem;
-  z-index: 1;
-}
-.navbar .navbar-brand {
-  margin-left: 1rem;
-}
-.navbar .navbar-brand span.display-5 {
-  line-height: 1;
-}
-.navbar .navbar-brand span.display-5 span {
-  line-height: 0;
-}
-.navbar .navbar-brand .sub-text {
-  position: absolute;
-  right: -1rem;
-}
-.navbar .nav-link {
-  font-family: serif;
-}
-
-.desc {
-  background-color: #fff;
-  position: absolute;
-  bottom: 40px;
-}
-.desc h5 {
-  font-size: 18px;
-  line-height: 0.7;
-  letter-spacing: 0.1rem;
-  font-family: ui-san-serif;
-}
-.desc h1 {
-  font-size: 32px;
-}
-
-.cover {
-  min-width: 100vw;
-  width: 100vw;
-}
-
-.about.cover {
-  padding: 120px 0;
-  background-color: #eee;
-  position: relative;
-}
-.about.cover .row .col .section-subtitle {
-  letter-spacing: 3px;
-  font-size: small;
-  text-transform: uppercase;
-}
-.about.cover .row .col .section-heading {
-  font-size: 2rem;
-  font-family: serif;
-}
-.about.cover .row .col .section-heading span {
-  font-size: 2.5rem;
-  font-family: "Dantina", "Brush Script", cursive;
-}
-.about.cover .row .col ul li {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px;
-}
-.about.cover .row .col ul li p {
-  margin: 0;
-  margin-left: 5px;
-}
-.about.cover .row .col ul li .about-list-icon {
-  display: flex;
-  align-items: center;
-}
-.about.cover .row .col ul li .about-list-icon span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #C08446;
-  font-size: 10px;
-}
-.about.cover .row .col ul li .about-list-icon .ti-check:before {
-  content: "\e64c";
-}
-.about.cover .row .col hr {
-  border-color: #a5a9ad !important;
-  border-style: solid;
-  border-width: 1px;
-  margin: 1rem 0 1.5rem;
-}
-.about.cover .row .col .btn {
-  font-size: medium;
-  border-radius: 2rem;
-}
-.about.cover .row .col .about-img {
-  position: relative;
-}
-.about.cover .row .col .about-img .img {
-  position: relative;
-  padding: 0 30px 30px 15px;
-}
-.about.cover .row .col .about-img .img img {
-  position: relative;
-  z-index: 2;
-  background-color: transparent;
-}
-.about.cover .row .col .about-img .img:after {
-  content: "";
-  background-color: #C08446;
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  bottom: 0;
-  right: 0;
-}
-.about.cover .row .col .about-img .img:before {
-  content: "";
-  background-color: transparent;
-  position: absolute;
-  top: -6%;
-  left: -3%;
-  bottom: 60%;
-  right: 60%;
-  background-image: url("./dots.png");
-  background-repeat: repeat;
-}
-
-@keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-100%);
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
+  to {
+    transform: rotate(360deg);
   }
-}/*# sourceMappingURL=App.css.map */
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
