--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -2,6 +2,10 @@
     font-family: 'Dantina';
     src: url('/src/assets/Dantina-Lj5y.otf');
 }
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('/src/assets/PlayfairDisplay[wght].ttf');
+}
 ul, li {
     text-decoration: none;
     list-style-type: none;
@@ -101,7 +105,7 @@ ul, li {
         }
         .section-heading{
             font-size: 2rem;
-            font-family: serif;
+            font-family: 'Playfair Display', sans-serif;
             span{
                 font-size: 2.5rem;
                 font-family: 'Dantina', "Brush Script", cursive;
