--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,6 @@
+body{
+    position:relative;
+}
 @font-face {
     font-family: 'Dantina';
     src: url('/src/assets/Dantina-Lj5y.otf');
@@ -65,6 +68,9 @@ ul, li {
 
     .nav-link{
         font-family: serif;
+        &:active{
+            color: #C08446;
+        }
     }
 }
   
